# snake-hs

./: .gitignore  CHANGELOG.md  snake-hs.cabal  stack.yaml
app/: Main.hs
