cabal-version:      2.4
name:               snake-hs
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Peter Gow
maintainer:         petergow@live.com.au

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files: CHANGELOG.md

executable snake-hs
    ghc-options:      -Wall -threaded
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0, time, random, brick, containers, lens, vty, mtl
    hs-source-dirs:   app
    default-language: Haskell2010
